// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PadBox Tests adds padding to only bottom 1`] = `
.c0 {
  width: 100%;
  padding-bottom: 0;
  padding-left: 2rem;
  padding-top: 2rem;
  padding-right: 2rem;
}

<div
  className="c0"
/>
`;

exports[`PadBox Tests adds padding to only left 1`] = `
.c0 {
  width: 100%;
  padding-bottom: 2rem;
  padding-left: 0;
  padding-top: 2rem;
  padding-right: 2rem;
}

<div
  className="c0"
/>
`;

exports[`PadBox Tests adds padding to only right 1`] = `
.c0 {
  width: 100%;
  padding-bottom: 2rem;
  padding-left: 2rem;
  padding-top: 2rem;
  padding-right: 0;
}

<div
  className="c0"
/>
`;

exports[`PadBox Tests adds padding to only right and size value for the rest of the sides 1`] = `
.c0 {
  width: 100%;
  padding-bottom: 20%;
  padding-left: 20%;
  padding-top: 20%;
  padding-right: 0;
}

<div
  className="c0"
  size=".20"
/>
`;

exports[`PadBox Tests adds padding to only top 1`] = `
.c0 {
  width: 100%;
  padding-bottom: 2rem;
  padding-left: 2rem;
  padding-top: 0;
  padding-right: 2rem;
}

<div
  className="c0"
/>
`;

exports[`PadBox Tests renders for all the correct sizes 1`] = `
.c0 {
  width: 100%;
  padding-bottom: 0;
  padding-left: 0;
  padding-top: 0;
  padding-right: 0;
}

<div
  className="c0"
  size="0"
/>
`;

exports[`PadBox Tests renders for all the correct sizes 2`] = `
.c0 {
  width: 100%;
  padding-bottom: 0.25rem;
  padding-left: 0.25rem;
  padding-top: 0.25rem;
  padding-right: 0.25rem;
}

<div
  className="c0"
  size="4"
/>
`;

exports[`PadBox Tests renders for all the correct sizes 3`] = `
.c0 {
  width: 100%;
  padding-bottom: 0.5rem;
  padding-left: 0.5rem;
  padding-top: 0.5rem;
  padding-right: 0.5rem;
}

<div
  className="c0"
  size="8"
/>
`;

exports[`PadBox Tests renders for all the correct sizes 4`] = `
.c0 {
  width: 100%;
  padding-bottom: 1rem;
  padding-left: 1rem;
  padding-top: 1rem;
  padding-right: 1rem;
}

<div
  className="c0"
  size="16"
/>
`;

exports[`PadBox Tests renders for all the correct sizes 5`] = `
.c0 {
  width: 100%;
  padding-bottom: 1.5rem;
  padding-left: 1.5rem;
  padding-top: 1.5rem;
  padding-right: 1.5rem;
}

<div
  className="c0"
  size="24"
/>
`;

exports[`PadBox Tests renders for all the correct sizes 6`] = `
.c0 {
  width: 100%;
  padding-bottom: 2rem;
  padding-left: 2rem;
  padding-top: 2rem;
  padding-right: 2rem;
}

<div
  className="c0"
  size="32"
/>
`;

exports[`PadBox Tests renders for all the correct sizes 7`] = `
.c0 {
  width: 100%;
  padding-bottom: 4rem;
  padding-left: 4rem;
  padding-top: 4rem;
  padding-right: 4rem;
}

<div
  className="c0"
  size="64"
/>
`;

exports[`PadBox Tests renders for all the correct sizes 8`] = `
.c0 {
  width: 100%;
  padding-bottom: 8rem;
  padding-left: 8rem;
  padding-top: 8rem;
  padding-right: 8rem;
}

<div
  className="c0"
  size="128"
/>
`;

exports[`PadBox Tests renders for all the correct sizes 9`] = `
.c0 {
  width: 100%;
  padding-bottom: 5%;
  padding-left: 5%;
  padding-top: 5%;
  padding-right: 5%;
}

<div
  className="c0"
  size=".05"
/>
`;

exports[`PadBox Tests renders for all the correct sizes 10`] = `
.c0 {
  width: 100%;
  padding-bottom: 10%;
  padding-left: 10%;
  padding-top: 10%;
  padding-right: 10%;
}

<div
  className="c0"
  size=".10"
/>
`;

exports[`PadBox Tests renders for all the correct sizes 11`] = `
.c0 {
  width: 100%;
  padding-bottom: 15%;
  padding-left: 15%;
  padding-top: 15%;
  padding-right: 15%;
}

<div
  className="c0"
  size=".15"
/>
`;

exports[`PadBox Tests renders for all the correct sizes 12`] = `
.c0 {
  width: 100%;
  padding-bottom: 20%;
  padding-left: 20%;
  padding-top: 20%;
  padding-right: 20%;
}

<div
  className="c0"
  size=".20"
/>
`;

exports[`PadBox Tests renders for all the correct sizes 13`] = `
.c0 {
  width: 100%;
}

<div
  className="c0"
  size={null}
/>
`;
